tests/paczka1/small_fuzzy/27106252.err
Error in line 1: eZG S992 75,5
Error in line 10: S992 S992 63,6
Error in line 2: KoVX S992 86,7
Error in line 11: S992 A831 7,5
